# instadoc

./: Cargo.toml  README.md
.github/workflows/: release.yml
etc/static/template/treno/: index.html  suite.html
src/: error.rs  main.rs
src/model/: error.rs  mod.rs
src/slug/: mod.rs
test/fixtures/001/: 001_doc.json
tools/: test.sh
