[package]
name = "instadoc"
version = "0.1.0"
edition = "2021"
description = "Generates API documentation, best friend of Instaunit"
repository = "https://github.com/bww/instadoc"
readme = "README.md"
license = "BSD-3-Clause"

[dependencies]
clap = { version="3.1", features=["derive"] }
handlebars = "4.3.1"
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
comrak = "0.13"
chrono = { version="0.4", features=["serde"] }
deunicode = "1.3"
