[package]
name = "instadoc"
version = "0.5.3"
edition = "2021"
description = "A static site generator for API documentation"
repository = "https://github.com/bww/instadoc"
readme = "README.md"
license = "BSD-3-Clause"

[dependencies]
clap = { version="3.1", features=["derive"] }
handlebars = "4.3.1"
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
chrono = { version="0.4", features=["serde"] }
comrak = "0.13"
deunicode = "1.3"
